[package]
name = "stm32f1-hal1"
version = "0.1.0"
authors = ["Pramode <mail@pramode.in>"]

[dependencies]
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal" }
cortex-m = "0.4.3"

[dependencies.cortex-m-rt]
version = "0.3.12"


[dependencies.stm32f103xx]
features = ["rt"]
version = "0.8.0"


