[package]
name = "workshop-todo"
version = "0.1.0"
authors = ["blackanger <blackanger.z@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
actix-web = "1.0.0-alpha.4"
log = "0.4.3"
futures = "0.1.22"
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.22"


[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.3.2"