[package]
name = "webpack"
version = "0.1.0"
authors = ["ibaryshnikov <baryshnikov.il@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.42"

[dependencies.web-sys]
version = "0.3.19"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
