[package]
name = "style_derive"
version = "0.0.1"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "MPL-2.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
darling = "0.9.0"
heck = "0.3.1"
proc-macro2 = "0.4.27"
quote = "0.6.11"
syn = "0.15.29"
synstructure = "0.10.1"
