[package]
name = "webp"
version = "0.1.0"
authors = ["Wangweizhen <hawking.rei@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "libwebp-sys",
  "cwebp",
]
default-members = [
  "libwebp-sys",
  "cwebp",
]

[dependencies]
bindgen = "0.49.0"
libwebp-sys = { path = "libwebp-sys" }
libc = "0.2.51"